[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Py4HEAppE"
authors = [{name = "IT4Innovations", email = "support.heappe@it4i.cz"}]
description = "Py4HEAppE Library"
version = "1.0.0"
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["LEXIS", "HEAppE", "client", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.scripts]
py4heappe = "py4heappe_cli:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/It4innovations/Py4HEAppE"
Issues = "https://github.com/It4innovations/Py4HEAppE/issues"